--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,5 +1,9 @@
 /* Sidebar container */
 
+body {
+  background-color: #f9f9f9;
+}
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -54,14 +58,14 @@ li svg {
 .hamburger {
   position: relative;
   font-size: 24px;
-  background: none;
   border: none;
-  color: white;
+  color: #333;
   cursor: pointer;
   z-index: 1100;
-  background-color: #333;
+  background-color: #fff;
   padding: 0px 8px 0px;
-  margin: 20px 10px 0px 20px;
+  margin: 0px 10px 0px 10px;
+  height: 50px;
 }
 
 .navHeader h3 {
@@ -106,7 +110,87 @@ li svg {
   color: white !important;
 }
 
+.preNav {
+  display: block;
+  width: 100%;
+  height: 121px;
+}
+
+.NavBar {
+  background-color: #fff;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.nav-right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 30px;
+}
+
+.nav-right span {
+  color: #333;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.nav-noti svg {
+  color: grey;
+  height: 15px;
+  width: 15px;
+}
+
+.nav-profile img {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin: 0px 7px 0px 7px;
+}
+
+.nav-divider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 0 15px;
+}
+
+.vertical-line {
+  width: 1px;
+  height: 40px;
+  border-left: 1px dashed #ddd;
+}
+
+/* region desktop */
+
 @media screen and (min-width: 769px) {
+  .nav-right span {
+    color: #333;
+    font-size: 15px;
+    font-weight: bold;
+  }
+  .nav-noti svg {
+    color: grey;
+    height: 25px;
+    width: 25px;
+  }
+  .nav-profile img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 0px 10px 0px 10px;
+  }
+  .nav-divider {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 0 15px;
+  }
   .sidebar {
     display: none;
   }
@@ -121,9 +205,12 @@ li svg {
     color: white;
     transition: left 0.3s ease-in-out;
     padding-top: 60px;
-    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
+    border-right: 1px solid #ddd;
     z-index: 1000;
     display: block;
+  }
+  .preNav {
+    width: calc(100% - 251px);
   }
   .navHeader h3 {
     margin: 20px 0px 0px 20px;
@@ -136,8 +223,8 @@ li svg {
     padding: 10px 15px;
     text-align: left;
     margin: 10px 0px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 18px;
+    margin-right: 18px;
   }
   .desktop-sidebar ul li a {
     color: #333;
@@ -146,3 +233,5 @@ li svg {
     font-size: 15px;
   }
 }
+
+/* endregion desktop */
