feat: get profile, edit profile and change password

--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -61,15 +61,22 @@ li svg {
   border: none;
   color: #333;
   cursor: pointer;
-  z-index: 1100;
+  z-index: 100;
   background-color: #fff;
-  padding: 0px 8px 0px;
-  margin: 0px 10px 0px 10px;
-  height: 50px;
+  margin: 0px;
+  width: 70px;
+  height: 70px;
 }
 
 .navHeader h3 {
   margin: 20px 0px 0px 0px;
+}
+
+@media screen and (max-width: 768px) {
+  .navHeader h3 {
+    margin: 5px 0px 0px 0px;
+    font-size: 20px;
+  }
 }
 
 /* Close Button */
@@ -235,3 +242,29 @@ li svg {
 }
 
 /* endregion desktop */
+
+.toast-message {
+  position: fixed;
+  top: 20px;
+  transform: translateX(-50%);
+  background: #28a745;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 5px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 11000 !important;
+  font-weight: bold;
+}
+
+.toast-message2 {
+  position: fixed;
+  top: 20px;
+  transform: translateX(-50%);
+  background: #a72845;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 5px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 11000 !important;
+  font-weight: bold;
+}
