--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -460,27 +460,251 @@ iframe {
 }
 
 .toast-message {
-  position: fixed;
-  top: 20px;
-  transform: translateX(-50%);
-  background: #28a745;
-  color: white;
-  padding: 12px 20px;
-  border-radius: 5px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-  font-weight: bold;
+  top: 100px !important;
 }
 
 .toast-message2 {
+  top: 100px !important;
+}
+
+.main-body {
+  height: calc(100vh - 180px);
+  width: calc(100vw - 330px);
+  background-color: #fff;
   position: fixed;
-  top: 20px;
-  transform: translateX(-50%);
-  background: #a72845;
-  color: white;
-  padding: 12px 20px;
+  top: 150px;
+  left: 290px;
+  border-radius: 15px;
+  padding: 50px 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .main-body {
+    height: 100vh;
+    width: 100vw;
+    top: 115px;
+    left: 0px;
+    border-radius: 0px;
+  }
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.loader {
+  border: 3px solid #f3f3f3;
+  border-top: 3px dotted #333;
+  border-right: 3px dotted #333;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.postHead {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.borderedContainer {
+  border: 1px solid #aaa;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+}
+
+.borderedContainer2 {
+  border: 1px solid #aaa;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.profileImage img {
+  border-radius: 100%;
+  height: 80px;
+  width: 80px;
+}
+
+.profileInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.profileInfo h5 {
+  font-size: 15px;
+  color: black;
+  margin-bottom: 2px;
+}
+
+.profileInfo p {
+  font-size: 14px;
+  color: #888;
+  margin-bottom: 2px;
+}
+
+.borderedTitle {
+  color: #333;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.paddedInfo {
+  display: flex;
+}
+
+.paddedInfo div {
+  max-width: 50%;
+  width: 200px;
+}
+
+.paddedInfo p {
+  font-size: 13px;
+  color: #888;
+  margin-bottom: 0px;
+}
+
+.buttonDiv {
+  margin-top: 20px;
+  display: flex;
+}
+
+/* modal styles */
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  z-index: 999 !important;
+}
+
+.modal-content {
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  width: 90%;
+  max-width: 500px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  animation: fadeIn 0.3s ease-in-out;
+  z-index: 999 !important;
+}
+
+.modal-content h5 {
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: #333;
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 5px;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-  font-weight: bold;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.modal-buttons .btn {
+  padding: 10px 20px;
+  font-size: 14px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-buttons .btn-primary {
+  background-color: #57b846;
+  color: #fff;
+  transition: background-color 0.3s ease;
+}
+
+.modal-buttons .btn-primary:hover {
+  background-color: #45a035;
+}
+
+.modal-buttons .btn-secondary {
+  background-color: #ccc;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+
+.modal-buttons .btn-secondary:hover {
+  background-color: #bbb;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+/* end modal styles */
+
+.formError {
+  color: #c80000;
+  font-size: 14px;
+  margin-bottom: 10px;
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.formErrorDiv {
+  border: 1px solid #c80000;
+  padding: 3px 5px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  align-items: center;
+  width: fit-content;
+  display: flex;
+}
+
+.formErrorDiv svg {
+  margin-right: 10px;
+  color: #c80000;
+}
+
+.btnspinner {
+  height: 20px !important;
+  width: 20px !important;
 }
