--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -611,6 +611,32 @@ iframe {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   animation: fadeIn 0.3s ease-in-out;
   z-index: 999 !important;
+  max-height: 90vh;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  /* For Firefox */
+  scrollbar-color: #ccc #f3f3f3;
+  /* For Firefox */
+}
+
+@media screen and (max-width: 768px) {
+  .modal-content {
+    max-width: 95%;
+  }
+}
+
+.modal-content::-webkit-scrollbar {
+  width: 6px;
+  /* For Chrome, Safari, and Edge */
+}
+
+.modal-content::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 3px;
+}
+
+.modal-content::-webkit-scrollbar-track {
+  background-color: #f3f3f3;
 }
 
 .modal-content h5 {
