--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -272,3 +272,62 @@ li svg {
 .toastH {
   position: static !important;
 }
+
+.btn-theme {
+  background-color: #0057ff;
+  color: white;
+  border: 1px solid #0057ff;
+  transition-duration: 0.3s;
+  height: 40px;
+}
+
+.btn-theme:hover {
+  background-color: white;
+  color: #0057ff;
+  border: 1px solid #0057ff;
+}
+
+.s-25 {
+  height: 25px !important;
+  width: 25px !important;
+}
+
+.s-35 {
+  height: 35px !important;
+  width: 35px !important;
+}
+
+.s-50 {
+  height: 50px !important;
+  width: 50px !important;
+}
+
+.s-75 {
+  height: 75px !important;
+  width: 75px !important;
+}
+
+.s-100 {
+  height: 100px !important;
+  width: 100px !important;
+}
+
+.s-125 {
+  height: 125px !important;
+  width: 125px !important;
+}
+
+.s-150 {
+  height: 150px !important;
+  width: 150px !important;
+}
+
+.s-175 {
+  height: 175px !important;
+  width: 175px !important;
+}
+
+.s-200 {
+  height: 200px !important;
+  width: 200px !important;
+}
