--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1071,6 +1071,7 @@ iframe {
   margin-bottom: 20px;
   width: 100%;
   display: flex;
+  align-items: center;
 }
 
 .searchBarContainer svg {
@@ -1083,6 +1084,19 @@ iframe {
   outline: none;
   font-size: 15px;
   width: calc(100% - 38px);
+}
+
+.returnUp {
+  position: fixed;
+  bottom: 20px;
+  opacity: 0;
+  visibility: hidden;
+  right: 20px;
+  background-color: #015aa0 !important;
+  color: white !important;
+  transition:
+    opacity 0.6s ease-out,
+    visibility 0.6s ease-out !important;
 }
 
 @media screen and (min-width: 1024px) {
