--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -74,6 +74,30 @@ input {
   border: none;
 }
 
+.validate-input {
+  position: relative;
+  display: inline-block;
+}
+
+label {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: 0.3s ease-in-out;
+  font-size: 15x;
+  color: #888;
+  pointer-events: none;
+}
+
+input:focus + label,
+input:not(:placeholder-shown) + label {
+  top: 0;
+  font-size: 13px;
+  color: #000;
+  background: white;
+  padding: 0 5px;
+}
+
 textarea {
   outline: none;
   border: none;
@@ -82,70 +106,6 @@ textarea {
 textarea:focus,
 input:focus {
   border-color: transparent !important;
-}
-
-input:focus::-webkit-input-placeholder {
-  color: transparent;
-}
-
-input:focus:-moz-placeholder {
-  color: transparent;
-}
-
-input:focus::-moz-placeholder {
-  color: transparent;
-}
-
-input:focus:-ms-input-placeholder {
-  color: transparent;
-}
-
-textarea:focus::-webkit-input-placeholder {
-  color: transparent;
-}
-
-textarea:focus:-moz-placeholder {
-  color: transparent;
-}
-
-textarea:focus::-moz-placeholder {
-  color: transparent;
-}
-
-textarea:focus:-ms-input-placeholder {
-  color: transparent;
-}
-
-input::-webkit-input-placeholder {
-  color: #adadad;
-}
-
-input:-moz-placeholder {
-  color: #adadad;
-}
-
-input::-moz-placeholder {
-  color: #adadad;
-}
-
-input:-ms-input-placeholder {
-  color: #adadad;
-}
-
-textarea::-webkit-input-placeholder {
-  color: #adadad;
-}
-
-textarea:-moz-placeholder {
-  color: #adadad;
-}
-
-textarea::-moz-placeholder {
-  color: #adadad;
-}
-
-textarea:-ms-input-placeholder {
-  color: #adadad;
 }
 
 /*---------------------------------------------*/
@@ -175,7 +135,7 @@ iframe {
 
 .txt2 {
   font-size: 15px;
-  color: #57b846;
+  color: #0057ff;
   line-height: 1.5;
 }
 
@@ -287,7 +247,7 @@ iframe {
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
   transition: all 0.4s;
-  background: #57b846;
+  background: #0057ff;
 }
 
 .focus-input100::after {
@@ -355,7 +315,7 @@ iframe {
   padding: 0 20px;
   width: 100%;
   height: 50px;
-  background-color: #57b846;
+  background-color: #0057ff;
   border-radius: 25px;
   box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
   -moz-box-shadow: 0 10px 30px 0px rgba(87, 184, 70, 0.5);
@@ -772,7 +732,7 @@ iframe {
 }
 
 .modal-buttons .btn-primary {
-  background-color: #57b846;
+  background-color: #0057ff;
   color: #fff;
   transition: background-color 0.3s ease;
 }
@@ -1052,6 +1012,29 @@ iframe {
   font-size: 12px !important;
   margin-right: 10px;
   transition-duration: 0.3s !important;
+  height: 40px;
+}
+
+@media screen and (max-width: 1024px) {
+  .sortContainer {
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 100%;
+    justify-content: space-evenly;
+  }
+  .btn-reset svg {
+    display: none;
+  }
+  .btn-reset {
+    padding: 2px !important;
+  }
+  .desktopFilterMain {
+    margin: 40px 0px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    height: fit-content;
+  }
 }
 
 .btn-reset:hover {
@@ -1102,6 +1085,9 @@ iframe {
 @media screen and (min-width: 1024px) {
   .sortContainer button {
     margin-right: 50px;
+  }
+  .showFilterBtn {
+    display: none !important;
   }
   .sortContainer {
     width: 400px;
