--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -466,6 +466,15 @@ iframe {
   overflow-y: scroll;
 }
 
+.main-body4 {
+  padding-top: 30px !important;
+  padding-bottom: 30px !important;
+}
+
+.main-body5 {
+  background-color: #f9f9f9 !important;
+}
+
 .sub-body {
   height: 100%;
   overflow: scroll;
@@ -925,7 +934,11 @@ iframe {
   margin: 10px 0px;
 }
 
-.searchTitle span {
+.searchTitle a {
+  text-decoration: none;
+}
+
+.searchTitle a span {
   font-size: 16px;
   font-weight: 700;
   color: #4d4d4d;
@@ -1123,4 +1136,280 @@ iframe {
   .filterHeading {
     font-size: 1.3vw;
   }
+}
+
+.courseHeader {
+  height: 300px;
+  width: 100%;
+  background-color: #222;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.headerImage {
+  height: 171px;
+  aspect-ratio: 300 / 171;
+  width: auto;
+  border-radius: 4px;
+}
+
+.headerImageCon {
+  border: 4px solid white;
+  border-radius: 4px;
+  height: fit-content;
+  width: fit-content;
+  background-color: white;
+}
+
+.headerContent {
+  display: flex;
+  padding: 20px;
+  justify-content: space-between;
+  align-items: center;
+  width: 850px;
+}
+
+.starDiv span {
+  color: white;
+  margin-right: 10px;
+  line-height: 1;
+}
+
+.continueBtn {
+  background-color: #015aa0 !important;
+  color: white !important;
+}
+
+.continueBtn span {
+  font-size: 15px;
+}
+
+.headerTitle div {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+.starDiv {
+  margin-right: 10px;
+  margin-bottom: 0px !important;
+}
+
+.headerTitle div span {
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  margin-right: 15px;
+}
+
+.headerDesc span {
+  color: #aaa !important;
+  font-size: 14px !important;
+}
+
+.headerDesc {
+  margin-bottom: 10px;
+}
+
+.courseBody {
+  margin-top: 50px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.collapsibleDiv {
+  background-color: #fff;
+}
+
+.collapsible {
+  box-shadow:
+    0px 2px 4px rgba(0, 0, 0, 0.07),
+    0px 0px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 8px;
+  width: 620px;
+  margin: 10px;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 1419px) and (min-width: 1290px) {
+  .collapsible {
+    width: 850px;
+  }
+  .headerImageCon {
+    margin-right: 20px;
+  }
+  .headerContent {
+    width: 850px !important;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
+@media screen and (min-width: 1420px) {
+  .collapsible {
+    width: 1000px;
+  }
+  .headerImageCon {
+    margin-right: 20px;
+  }
+  .headerContent {
+    width: 1000px !important;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
+.collapsible-header {
+  width: 100%;
+  padding: 10px;
+  background: #fff;
+  display: flex;
+  height: 50px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  justify-content: space-between;
+}
+
+.collapsible-header button {
+  color: #000;
+  border: none;
+  cursor: pointer;
+  text-align: left;
+}
+
+.collapsible-header button svg {
+  margin-right: 20px;
+}
+
+.collapsible-content {
+  max-height: 0;
+  overflow: hidden;
+  transition:
+    max-height 0.3s ease-out,
+    padding 0.3s ease-out;
+}
+
+.collapsible-content.open {
+  max-height: 200px;
+  display: flex;
+}
+
+.collapsible-content div {
+  display: flex;
+}
+
+.mobileCourseHeader {
+  height: fit-content;
+  width: 100%;
+  background-color: #222;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.mheaderImageCon {
+  height: 200px;
+  width: auto;
+}
+
+.mheaderImageCon img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.mheaderTitle div {
+  color: #fff;
+}
+
+.mheaderTitle {
+  padding: 20px;
+}
+
+.mheaderContent {
+  position: relative;
+}
+
+.mcircleProgress {
+  position: absolute;
+  top: -190px;
+  right: 10px;
+  border-radius: 100%;
+  background-color: #333;
+}
+
+@media screen and (max-width: 1000px) {
+  .courseHeader {
+    display: none;
+  }
+  .collapsible {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1001px) {
+  .mobileCourseHeader {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1289px) {
+  .courseHeader {
+    display: none;
+  }
+  .mobileCourseHeader {
+    display: block;
+  }
+  .collapsible {
+    width: 100%;
+  }
+}
+
+.collapseIcon {
+  background-color: #ddd;
+  width: 40px;
+  padding: 10px;
+}
+
+.collapseText {
+  width: calc(100% - 40px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 20px;
+  padding: 10px 0px;
+}
+
+.collapseText p {
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+
+.collapseText span {
+  font-size: 12px;
+  color: #0057d2;
+}
+
+.collapsible-content {
+  background-color: #fff;
+}
+
+.colbtn {
+  display: flex;
+}
+
+.colbtn div {
+  width: 30px;
+}
+
+.sectionTitle {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
