feat: added logos

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -189,17 +189,38 @@ iframe {
   font-size: 20px;
 }
 
-.login100-form-avatar {
-  display: block;
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
+.login100-form-logo {
+  display: flex;
+  justify-content: center;
+  width: 300px;
+  height: 300px;
   overflow: hidden;
   margin: 0 auto;
 }
 
-.login100-form-avatar img {
-  width: 100%;
+.signupLogo {
+  height: 200px !important;
+  width: 200px !important;
+}
+
+.login100-form-logo img {
+  height: 100%;
+}
+
+.sign100-form {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+@media screen and (max-width: 500px) {
+  .ftitle1 {
+    font-size: 25px;
+    margin-bottom: 10px;
+    font-weight: 700;
+  }
+  .ftitle2 {
+    font-size: 16px;
+  }
 }
 
 /*------------------------------------------------------------------
