--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1815,3 +1815,157 @@ iframe {
 .first-letter-cap::first-letter {
   text-transform: uppercase;
 }
+
+.cContentLink {
+  margin-left: 50px;
+}
+
+@media screen and (max-width: 338px) {
+  .cContentLink {
+    margin-left: 0px;
+  }
+}
+
+.tab-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  padding: 20px;
+}
+
+.tab-header {
+  display: flex;
+  justify-content: space-around;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.tab-button {
+  flex: 1;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #333;
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease;
+  border-radius: 8px;
+}
+
+.tab-button:hover {
+  background-color: #eaeaea;
+}
+
+.tab-button.active {
+  background-color: #0057ff;
+  color: #fff;
+}
+
+.tab-content {
+  padding: 20px;
+}
+
+.learning-path-tab,
+.course-tab {
+  text-align: center;
+}
+
+.learning-path-tab h3,
+.course-tab h3 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 486px) {
+  .unshow-mobile {
+    display: none;
+  }
+  .tab-button {
+    font-size: 13px;
+  }
+}
+
+#learningPathForm,
+#courseForm {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-top: 50px;
+}
+
+#learningPathForm label,
+#courseForm label {
+  font-size: 14px;
+  color: #333;
+  margin-bottom: 0px;
+  width: fit-content;
+}
+
+#learningPathForm .form-group,
+#courseForm .form-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+#learningPathForm input,
+#courseForm input {
+  width: 100% !important;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+#learningPathForm input[type="checkbox"],
+#courseForm input[type="checkbox"] {
+  width: auto !important;
+  align-self: flex-start;
+  justify-self: flex-start;
+}
+
+.uploadImageCon {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.uploadImageCon button {
+  width: 220px;
+  height: 40px;
+  margin-left: 20px;
+}
+
+.image-preview-container {
+  width: 300px;
+}
+
+.image-preview-container img {
+  width: 300px;
+}
+
+@media screen and (max-width: 664px) {
+  .uploadImageCon {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-bottom: 0px;
+  }
+  .uploadImageCon button {
+    width: 100%;
+    height: 40px;
+    margin: 20px 0px !important;
+  }
+}
