--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -144,11 +144,25 @@ li svg {
 .navbar-title h3 {
   font-size: 20px;
   margin: 20px 0px 0px 20px !important;
+  line-height: 1.1;
 }
 
 .navbar-title h5 {
   font-size: 15px;
   margin: 20px 0px 0px 5px !important;
+  line-height: 1.1;
+}
+
+@media screen and (max-width: 500px) {
+  .navbar-title h3 {
+    font-size: 17px;
+    margin: 0px 0px 0px 20px !important;
+    line-height: 1.1;
+  }
+  .navbar-title h5 {
+    font-size: 12px;
+    margin: 0px 0px 0px 5px !important;
+  }
 }
 
 .nav-right {
